finished all logi

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="winsloss">
         <p class="wins"> </p>
-        <p class+"loss"> </p>
+        <p class="loss"> </p>
 
     </div>
     <div class="crys1">
@@ -46,7 +46,7 @@
     <div class="totalscore">
         <p> Your total score is:</p>
     </div>
-    <div>
+    <div class = "score">
        <h2 class="roundscore">
 
        </h2>
