finished style.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
-    <h1>Crystals Collector!</h1>
+    <div class="margin">
+    <h1 class="h1">Crystals Collector!</h1>
     <br>
     <div class="instructions">
         <p> You will be given a random number at the start of the game. </p>
@@ -23,14 +24,7 @@
         <br>
         <p>Each time the game restarts, the value of the crystals change. </p>
     </div>
-    <div class="random">
-
-    </div>
-    <div class="winsloss">
-        <p class="wins"> </p>
-        <p class="loss"> </p>
-
-    </div>
+   <br> <br>
     <div class="crys1">
         <img src="assets/images/Ametrine Crystal03.png" alt="Ametrine">
     </div>
@@ -43,6 +37,15 @@
     <div class="crys4">
         <img src="assets/images/Ruby Gem_2.png" alt="Ruby">    
     </div>
+    <div class="winsloss">
+        <p class="wins"> </p>
+        <p class="loss"> </p>
+
+    </div>
+    <br>
+    <div class="random">
+        
+    </div>
     <div class="totalscore">
         <p> Your total score is:</p>
     </div>
@@ -54,7 +57,7 @@
 
 
     </div>
-
+    </div>
 
 </body>
 </html>
